--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint \"src/**/*\" --ext .js,.jsx,.ts,.tsx",
+    "lint:write": "eslint --fix \"src/**/*\" --ext .js,.jsx,.ts,.tsx",
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
@@ -24,15 +28,28 @@
     "gatsby-plugin-react-helmet": "^5.14.0",
     "gatsby-plugin-styled-components": "^5.14.0",
     "gatsby-source-filesystem": "^4.14.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@types/jest": "^27.5.1",
     "@types/node": "^17.0.31",
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.16",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "babel-jest": "^28.1.0",
+    "babel-preset-gatsby": "^2.14.0",
+    "eslint": "^8.15.0",
+    "eslint-config-react-app": "^7.0.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
+    "react-test-renderer": "^18.1.0",
     "typescript": "^4.6.4"
   }
 }
