--- a/package.json
+++ b/package.json
@@ -38,14 +38,15 @@
     "@testing-library/react": "^13.2.0",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.31",
-    "@types/react": "^17.0.44",
-    "@types/react-dom": "^17.0.16",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "babel-jest": "^28.1.0",
     "babel-preset-gatsby": "^2.14.0",
     "eslint": "^8.15.0",
     "eslint-config-react-app": "^7.0.1",
+    "gatsby-plugin-dts-css-modules": "^2.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
