--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^4.14.1",
     "gatsby-plugin-mdx": "^3.14.0",
+    "gatsby-plugin-netlify-cms": "^6.14.0",
     "gatsby-plugin-react-helmet": "^5.14.0",
     "gatsby-plugin-styled-components": "^5.14.0",
     "gatsby-source-filesystem": "^4.14.0",
+    "netlify-cms-app": "^2.15.72",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
