--- a/tsconfig.json
+++ b/tsconfig.json
@@ -99,5 +99,5 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "include": ["./src/**/*", "./gatsby-node.ts",
-    "./gatsby-config.js", "./plugins/**/*"]
+    "./gatsby-config", "./plugins/**/*"]
 }
